MarcoKitTests/TestData/error/simple.marco
--before
foo

--after
2: 'false' expected
